# backend/internal/models/event_config.go
@@ -13,7 +13,7 @@ type EventConfig struct {
 	TimeLimit        int       `gorm:"default:0"`
 	TestLink         uuid.UUID `gorm:"type:uuid;default:gen_random_uuid()"`
 	Threshold        float64
-	ExtraThreshold   []ExtraThreshold
-	Test             Test `gorm:"foreignKey:TestID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
-	User             User `gorm:"foreignKey:CreatorID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
+	ExtraThreshold   []ExtraThreshold `gorm:"foreignKey:ConfigID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
+	Test             Test             `gorm:"foreignKey:TestID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
+	User             User             `gorm:"foreignKey:CreatorID;constraint:OnDelete:CASCADE;OnUpdate:CASCADE"`
 }
